--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="google-site-verification" content="lGhcfMzPtQF1LW7oed_MD8SkCTUTBsk-UUGVv12TBXI" />
 </head>
 <body>
     <div class="container">
@@ -37,3 +38,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
